Complete the warmup

--- a/warmup.html
+++ b/warmup.html
@@ -23,10 +23,14 @@
   -->
 
   <dl>
-    <dt>Puppies</dt>
+    <dt class="bold">Puppies</dt>
     <dd>Baby dogs are pretty adorable</dd>
-    <dt>Kitties</dt>
-    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd>    
+    <dt class="bold">Kitties</dt>
+    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd>  
+    <dt class="bold">Cubs</dt>
+    <dd>Baby bears are cuter than both puppies and kittens!</dd>
+    <dt class="bold">This Panda</dt>
+    <dd> <img src="http://bit.ly/1MadBtw" alt="baby panda bear yawning" />
   </dl>
   
 </body>
